@@ -49,6 +49,9 @@
 (defalias 'facep 'ignore)
 
 (require 'cl)
+(unless (dolist (var nil t))
+  ;; Override the macro `dolist' which might be defined in egg.el.
+  (load "cl-macs" nil t))
 
 (defvar srcdir (or (getenv "srcdir") "."))
 
